--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -42,7 +42,8 @@ install_load <- function (package1, ...)  {
    } 
 }
 
-install_load("knitr","ggplot2","viridis","dplyr","DT","showtext","ggrepel","GGally","tibble")
+install_load("knitr","ggplot2","viridis","dplyr","DT","showtext","ggrepel","GGally","tibble",
+             "scales")
 
 # Set wd 
 opts_knit$set(root.dir = normalizePath("./"))
@@ -218,72 +219,48 @@ ggplot(data_cars, aes(x = cc, y = mpg)) +
 
 Visualisasi ini digunakan untuk menganalisis hubungan beberapa variabel numerik sekaligus.
 
-```{r}
-# Tambahkan kolom highlight
-data_cars <- data_cars %>%
-  mutate(
-    highlight = ifelse(rownames(.) %in% label_cars$car_name, rownames(.), "Lainnya"),
-    highlight = factor(highlight, levels = c(label_cars$car_name, "Lainnya"))
-  )
-
-# Warna khusus
-highlight_colors <- c("#21637b", "#967349", "#ad0c1b", "grey70")  
-color_mapping <- setNames(highlight_colors, levels(data_cars$highlight))
-
-# Pilih kolom berdasarkan nama
-selected_columns <- c("mpg", "hp", "drat", "wt", "qsec", "cc")
-
-# Tentukan posisi label di ujung garis (sumbu X terakhir)
-x_max <- length(selected_columns)  # Posisi sumbu X paling kanan
-label_positions <- data_cars %>%
-  filter(rownames(.) %in% label_cars$car_name) %>%
-  select(all_of(selected_columns)) %>%
-  mutate(car_name = rownames(.),
-         x = x_max,  # Posisi label di ujung kanan
-         # Ambil nilai terakhir
-         y = select(., all_of(selected_columns[length(selected_columns)]))[[1]])  
-```
-
 ```{r fig.height=5, fig.width=8, dpi=300}
 # Tambahkan kolom highlight dan alpha transparansi
 data_cars <- data_cars %>%
   mutate(
     highlight = ifelse(car_name %in% label_cars$car_name, car_name, "Lainnya"),
     highlight = factor(highlight, levels = c(label_cars$car_name, "Lainnya")),
-    alpha_val = ifelse(highlight == "Lainnya", 0.2, 1)  # Buat mobil lain lebih transparan
+    alpha_val = ifelse(highlight == "Lainnya", 0.2, 1)
   )
 
 # Warna khusus: 3 mobil utama + lainnya dalam warna abu-abu
-highlight_colors <- c("#21637b", "#967349", "#ad0c1b", "grey80")  
+highlight_colors <- c("#21637b", "#967349", "#ad0c1b", "#E8E8E8")  
 color_mapping <- setNames(highlight_colors, levels(data_cars$highlight))
 
-# Pilih kolom berdasarkan nama
+# Pilih kolom numerik untuk normalisasi
 selected_columns <- c("mpg", "hp", "drat", "wt", "qsec", "cc")
 
-# **Pastikan `label_positions` mengambil nilai dari `cc` sebagai y**
-x_max <- length(selected_columns) + 0.5  # Tempatkan label sedikit di luar grafik
-label_positions <- data_cars %>%
+# **Normalisasi data ke skala 0-1 secara manual**
+data_cars_norm <- data_cars %>%
+  mutate(across(all_of(selected_columns), rescale))
+
+# **Ambil nilai cc yang sudah dinormalisasi untuk label**
+label_positions <- data_cars_norm %>%
   filter(car_name %in% label_cars$car_name) %>%
-  select(car_name, cc)  # Ambil nilai cc sebagai y_position
+  select(car_name, cc)  # Gunakan nilai cc yang sudah dinormalisasi
+
+x_max <- length(selected_columns) + 0.5  # Tempatkan label sedikit di luar grafik
 
 # **Plot**
 ggparcoord(data_cars, 
            columns = match(selected_columns, colnames(data_cars)),   
            groupColumn = "highlight",          
-           scale = "globalminmax",  # Normalisasi agar lebih proporsional
+           scale = "uniminmax",  # Pastikan skala normalisasi
            showPoints = TRUE,    
-           alphaLines = 0.6) +   # Pastikan garis terlihat
+           alphaLines = 0.6) +   
   scale_color_manual(values = color_mapping) +  
-  scale_alpha_identity() +  # Pastikan alpha bekerja
+  scale_alpha_identity() +  
   labs(title = "Parallel Coordinates Plot: data_cars",
-       x = "", y = "") +
+       x = "", y = "Skala Normalisasi (0 - 1)") +
 
   # **Tambahkan label di ujung garis menggunakan annotate()**
   annotate("text", x = x_max, y = label_positions$cc, 
            label = label_positions$car_name, color = "black", size = 6, fontface = "bold", hjust = -0.2) +
-
-  # **Pastikan skala y sesuai**
-  scale_y_continuous(expand = expansion(mult = c(0.1, 0.1))) +
 
   # **Hapus legend**
   theme(legend.position = "none") +
