--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -42,8 +42,8 @@ install_load <- function (package1, ...)  {
    } 
 }
 
-install_load("knitr","ggplot2","viridis","dplyr","DT","showtext","ggrepel","GGally","tibble",
-             "scales")
+install_load("knitr","ggplot2","viridis","dplyr","DT","showtext","ggrepel",
+             "GGally","tibble","scales","tidyverse","fmsb")
 
 # Set wd 
 opts_knit$set(root.dir = normalizePath("./"))
@@ -440,6 +440,41 @@ ggparcoord(data_cars,
 
 Sering digunakan untuk membandingkan beberapa kategori dengan beberapa atribut dalam satu grafik.
 
+```{r fig.height=5, fig.width=8, dpi=300}
+# Normalisasi data numerik untuk radar chart
+normalize <- function(x) {
+  (x - min(x)) / (max(x) - min(x)) * 10
+}
+
+data_cars_norm <- data_cars %>% 
+  mutate(across(c(mpg, hp, drat, wt, qsec, cc), normalize))
+
+# Menyiapkan data untuk fmsb
+max_min <- data.frame(
+  matrix(rep(c(10, 0), 
+             each = ncol(data_cars_norm) - 1), 
+         nrow = 2, byrow = TRUE)
+  )
+colnames(max_min) <- colnames(data_cars_norm)[-1]
+
+data_selected <- data_cars_norm %>% 
+  filter(car_name %in% c("Mazda RX4", "Datsun 710", "Hornet 4 Drive"))
+data_radar <- rbind(max_min, data_selected[-1])
+
+# Plot radar chart
+radarchart(data_radar,
+           cglty = 1,       # Grid line type
+           cglcol = "gray", # Grid line color
+           pcol = c("red", "blue", "green"), # Warna untuk masing-masing mobil
+           plwd = 2,        # Ketebalan garis
+           plty = 1,        # Tipe garis
+           pfcol = c(rgb(1, 0, 0, 0.25), rgb(0, 0, 1, 0.25), rgb(0, 1, 0, 0.25)))  # Warna area transparan
+
+legend("topright", legend = c("Mazda RX4", "Datsun 710", "Hornet 4 Drive"),
+       bty = "n", pch = 20, col = c("red", "blue", "green"),
+       text.col = "grey25", pt.cex = 2)
+```
+
 ## Chord Diagram {#chord-diagram}
 
 ![](images/clipboard-1694170991.png){width="166"}
@@ -523,25 +558,3 @@ Menampilkan distribusi kata dalam teks berdasarkan frekuensi penggunaannya.
 ![](images/clipboard-3911942585.png){width="201"}
 
 Menampilkan struktur hierarki dari kata atau frasa dalam teks.
-
-# **Tables** {#tables}
-
-Tabel digunakan untuk menyajikan data numerik dan kategorikal dalam format yang mudah dibaca.
-
-## The Ten Guidelines of Better Tables {#better-tables}
-
-Sepuluh prinsip utama dalam mendesain tabel yang lebih baik.
-
-## Demonstration: A Basic Data Table Redesign {#basic-table-redesign}
-
-Contoh perbaikan desain tabel dasar agar lebih mudah dipahami.
-
-## Demonstration: A Regression Table Redesign {#regression-table-redesign}
-
-Contoh penyajian hasil regresi dalam format tabel yang lebih efektif.
-
-------------------------------------------------------------------------
-
-## **Kesimpulan**
-
-Pada praktikum ini, kita telah membahas berbagai teknik visualisasi untuk menunjukkan hubungan antar variabel, distribusi bagian ke keseluruhan, data kualitatif, serta penyajian tabel yang lebih efektif. Pemilihan jenis visualisasi yang tepat bergantung pada karakteristik data dan tujuan analisis yang ingin dicapai.
