--- a/Prak 03/Prak_03.rmd
+++ b/Prak 03/Prak_03.rmd
@@ -69,6 +69,8 @@ Materi praktikum ini mengacu pada **buku *Better Data Visualizations* karya Jona
 
 Dalam pekan ini, kita akan mengeksplorasi beberapa teknik visualisasi untuk memahami hubungan antar variabel, proporsi dalam data, analisis data kualitatif, serta penyajian data dalam tabel.
 
+Referensi: <https://r-charts.com/>
+
 ## **Navigasi Materi**
 
 -   [Relationship](#relationship)
@@ -553,10 +555,6 @@ chordDiagram(chord_data, transparency = 0.5, col = c("red", "blue", "green"))
 
 Menampilkan koneksi antar elemen dalam dataset dengan menggunakan kurva.
 
-```{r}
-
-```
-
 ## Correlation Matrix {#correlation-matrix}
 
 ![](images/clipboard-3620313916.png){width="310"}
@@ -587,11 +585,204 @@ Teknik visualisasi ini digunakan untuk menunjukkan bagaimana suatu bagian berkon
 
 Diagram lingkaran yang digunakan untuk menunjukkan distribusi persentase suatu kategori.
 
+### Pie
+
+```{r}
+df <- data.frame(value = c(15, 25, 32, 28),
+                 group = paste0("G", 1:4))
+
+# Get the positions
+df2 <- df %>% 
+  mutate(csum = rev(cumsum(rev(value))), 
+         pos = value/2 + lead(csum, 1),
+         pos = if_else(is.na(pos), value/2, pos))
+
+ggplot(df, aes(x = "" , y = value, fill = fct_inorder(group))) +
+  geom_col(width = 1, color = 1) +
+  coord_polar(theta = "y") +
+  scale_fill_brewer(palette = "Pastel1") +
+  geom_label_repel(data = df2,
+                   aes(y = pos, label = paste0(value, "%")),
+                   size = 4.5, nudge_x = 1, show.legend = FALSE) +
+  guides(fill = guide_legend(title = "Group")) +
+  theme_void()
+```
+
+```{r}
+# Get the positions
+df2 <- df %>% 
+  mutate(csum = rev(cumsum(rev(value))), 
+         pos = value/2 + lead(csum, 1),
+         pos = if_else(is.na(pos), value/2, pos))
+
+ggplot(df, aes(x = "", y = value, fill = fct_inorder(group))) +
+  geom_col(width = 1, color = 1) +
+  geom_text(aes(label = value),
+            position = position_stack(vjust = 0.5)) +
+  coord_polar(theta = "y") +
+  guides(fill = guide_legend(title = "Group")) +
+  scale_y_continuous(breaks = df2$pos, labels = df$group) +
+  theme(axis.ticks = element_blank(),
+        axis.title = element_blank(),
+        axis.text = element_text(size = 15), 
+        legend.position = "none", # Removes the legend
+        panel.background = element_rect(fill = "white"))
+```
+
+### Donut
+
+```{r}
+df <- data.frame(value = c(10, 30, 32, 28),
+                 group = paste0("G", 1:4))
+
+# Increase the value to make the hole bigger
+# Decrease the value to make the hole smaller
+hsize <- 4
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col() +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5))
+```
+
+```{r}
+# Hole size
+hsize <- 3.5
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col() +
+  geom_text(aes(label = value),
+            position = position_stack(vjust = 0.5)) +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5))
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col() +
+  geom_label(aes(label = value),
+             position = position_stack(vjust = 0.5),
+             show.legend = FALSE) +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5))
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  geom_label(aes(label = value),
+             position = position_stack(vjust = 0.5),
+             show.legend = FALSE) +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5))
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  coord_polar(theta = "y") +
+  scale_fill_manual(values = c("#FFF7FB", "#D0D1E6",
+                               "#74A9CF", "#0570B0")) +
+  xlim(c(0.2, hsize + 0.5))
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  geom_text(aes(label = value),
+             position = position_stack(vjust = 0.5)) +
+  coord_polar(theta = "y") +
+  scale_fill_brewer(palette = "GnBu") +
+  xlim(c(0.2, hsize + 0.5)) +
+  theme(panel.background = element_rect(fill = "white"),
+        panel.grid = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank(),
+        axis.text = element_blank())
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5)) +
+  scale_fill_discrete(labels = c("A", "B", "C", "D")) 
+
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5)) +
+  guides(fill = guide_legend(title = "Title"))
+```
+
+```{r}
+# Hole size
+hsize <- 3
+
+df <- df %>% 
+  mutate(x = hsize)
+
+ggplot(df, aes(x = hsize, y = value, fill = group)) +
+  geom_col(color = "black") +
+  coord_polar(theta = "y") +
+  xlim(c(0.2, hsize + 0.5)) +
+  theme(legend.position = "none")
+```
+
 ## Treemap {#treemap}
 
 ![](images/clipboard-1039790995.png){width="189"} ![](images/clipboard-3374195326.png){width="188"}
 
 Menampilkan hierarki data dalam bentuk persegi panjang bersarang.
+
+```{r}
+
+```
 
 ## Sunburst Diagram {#sunburst-diagram}
 
